# archetypal-core

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
archetypal_core/: __init__.py  prototype.ipynb
archetypal_core/models/: models.py
archetypal_core/rust/: Cargo.toml
archetypal_core/rust/src/: lib.rs
archetypal_core/schemas/: idfantic.json
docs/: index.md  modules.md
tests/: test_foo.py  test_rust_integration.py
